# splunk-ai-bot

./: .env.example  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: examples.md
src/: __init__.py  claude_agent.py  cli.py  mcp_server.py  splunk_client.py
tests/: test_claude_agent.py  test_splunk_client.py
